--- a/README.asciidoc
+++ b/README.asciidoc
@@ -5,7 +5,7 @@ image::example.jpg[]
 === Type of gropus
 - by file name without extension anywhere in the project
 - by folder
-- from Favourites tool window
+- from Favorites tool window
 - manually defined
 
 === Definitions
