--- a/README.asciidoc
+++ b/README.asciidoc
@@ -12,7 +12,7 @@ image::example.jpg[]
 Add anywhere in the file:
 
 - @idea.title yourTitle 
-- @idea.color #FF0096 (or 0xFF0096)  
+- @idea.color yellow (a name from https://www.w3schools.com/colors/colors_names.asp or a code like #FF0096 or 0xFF0096)  
                   
 === Relative paths to the current file
 - @idea.related file.txt
