--- a/README.asciidoc
+++ b/README.asciidoc
@@ -7,6 +7,20 @@ image::example.gif[]
 - by file name without extension anywhere in the project
 - by folder
 - manually defined in any file
+            
+== Shortcuts                    
+- Ctrl + Alt + Q - Refresh                                                           
+- Ctrl + Alt + W - Switch Group popup                                                         
+- Ctrl + Alt + Shift + W - Switch File popup
+
+- [Ctrl + Mouse Wheel] or [Ctrl + ; or ' ]  - switch file (closing the previous one)           
+- [Ctrl + Alt + Mouse Wheel] or [Ctrl + Alt + ; or ' ] - switch file (leaving the previous one opened)
+- [Ctrl + Alt + Shift + Mouse Wheel] or [Ctrl + Alt + Shift + ; or ' ] - switch file into a new window                                              
+              
+=== Tab click modifiers
+- [Ctrl/Alt + click] - open a file in a new tab
+- [Shift + click] - open a file in a new window
+
 
 == Definitions
 - in *.egroups - with language support
@@ -49,16 +63,6 @@ image::example.gif[]
 - @group.id - must be unique across the project, creates a new group if there is more than one (otherwise path+index is used, which breaks references on refactoring)
 - @group.root - root directory, by default the current file's one
                   
-== Shortcuts 
-- [Ctrl + Mouse Wheel] or [Ctrl + ; or ' ]  - switch file (closing the previous one)           
-- [Ctrl + Alt + Mouse Wheel] or [Ctrl + Alt + ; or ' ] - switch file (leaving the previous one opened)
-- [Ctrl + Alt + Shift + Mouse Wheel] or [Ctrl + Alt + Shift + ; or ' ] - switch file into a new window
-- Alt + Shift + Q - refresh                                                           
-              
-=== Tab click modifiers
-- [Ctrl/Alt + click] - open a file in a new tab
-- [Shift + click] - open a file in a new window
-
 === Advanced actions and settings
 - right click on the panel
 
