--- a/README.asciidoc
+++ b/README.asciidoc
@@ -64,3 +64,11 @@ image::example.gif[]
 - right click on the panel
 
 
+------
+![YourKit-Logo](https://www.yourkit.com/images/yklogo.png)
+
+YourKit supports open source projects with its full-featured Java Profiler.
+YourKit, LLC is the creator of [YourKit Java Profiler](https://www.yourkit.com/java/profiler/)
+and [YourKit .NET Profiler](https://www.yourkit.com/.net/profiler/),
+innovative and intelligent tools for profiling Java and .NET applications.
+
