--- a/README.asciidoc
+++ b/README.asciidoc
@@ -65,10 +65,10 @@ image::example.gif[]
 
 
 ------
-![YourKit-Logo](https://www.yourkit.com/images/yklogo.png)
+image::https://www.yourkit.com/images/yklogo.png[]
 
 YourKit supports open source projects with its full-featured Java Profiler.
-YourKit, LLC is the creator of [YourKit Java Profiler](https://www.yourkit.com/java/profiler/)
-and [YourKit .NET Profiler](https://www.yourkit.com/.net/profiler/),
+YourKit, LLC is the creator of https://www.yourkit.com/java/profiler/[YourKit Java Profiler]
+and https://www.yourkit.com/.net/profiler/[YourKit .NET Profiler],
 innovative and intelligent tools for profiling Java and .NET applications.
 
