action text, shortcuts change

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -16,7 +16,7 @@ image::example.gif[]
 
 - `Ctrl + Mouse Wheel` or `Ctrl + ; or '`  - switch file (closing the previous one)           
 - `Ctrl + Alt + Mouse Wheel` or `Ctrl + Alt + ; or '` - switch file (leaving the previous one opened)
-- `Ctrl + Alt + Shift + Mouse Wheel` or `Ctrl + Alt + Shift + ; or '` - switch file into a new window                                              
+- `Ctrl + Shift + Mouse Wheel` - switch file into a new window                                              
            
 === Tab click modifiers
 - `Ctrl + Left Button` - open a file in a new tab
