--- a/README.asciidoc
+++ b/README.asciidoc
@@ -22,7 +22,7 @@ image::example.gif[]
 - `Ctrl + Left Button` - open a file in a new tab
 - `Shift + Left Button` - open a file in a new window   
 - `Alt + Left Button` - open a file in a vertical split window
-- `Alt + Middle Button button` - open a file in a horizontal split window
+- `Alt + Shift + Left Button` - open a file in a horizontal split window
 - `Middle Button` - remove from group (only for Favorites)
  
 === Advanced actions and settings
