--- a/README.asciidoc
+++ b/README.asciidoc
@@ -6,7 +6,7 @@ image::example.gif[]
 - favorites
 - manually defined in `*.egroups` file (with language support) or in any other file 
 ** does not support refactoring yet
-- by file name without extension anywhere in the project
+- by the current file name (without extension) anywhere in the project
 - by regex (supporting regex groups, defined in settings) - https://github.com/krasa/EditorGroups/issues/5[#5]
 - by folder
 - bookmarks
