--- a/README.asciidoc
+++ b/README.asciidoc
@@ -74,7 +74,7 @@ image::example.gif[]
 - `@group.disable` (disables indexing of the current file)
 
 
-=== Regex groups
+== Regex groups
 image::regexSettings.png[]
 
 ---
